# clinical-rag-assistant

./: .gitignore  .pylintrc  CI_CD_SETUP.md  README.md  docker-compose.yml  pytest.ini  setup.cfg
.github/: CODEOWNERS
.github/workflows/: cd-deployment.yml  ci.yml  pr-status-check.yml
backend/: .dockerignore  .env  Dockerfile  requirements-dev.txt  requirements.txt
backend/app/: auth.py  config.py  database.py  main.py  schemas.py  services.py
backend/data/: local_rag.db
backend/tests/: __init__.py  test_example.py
frontend/: Dockerfile  index.html  nginx.conf
frontend/css/: styles.css
frontend/js/: app.js
