[metadata]
name = clinical-rag-assistant
version = 1.0.0

[flake8]
max-line-length = 100
exclude =
    .git,
    __pycache__,
    .venv,
    venv,
    env,
    build,
    dist,
    .eggs
ignore = E203, W503

[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True
